added a little HTML

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Beer 4 Jeers</title>
 </head>
 <body>
+    <h1>Beers for Jeers!</h1>
     <h2>Select your drink!</h2>
     <form>
         <input type="search" value="Choose a drink!"></input>
@@ -24,5 +25,14 @@
     <div>
         <!--image tag where a picture of the drink could go-->
     </div>
+    <div>
+        <h2>Earlier Pairings</h2>
+        <ul>
+            <li>Placeholder list item</li>
+        </ul>
+    </div>
+    <footer>
+
+    </footer>
 </body>
 </html>
