not sure, need to commit to pull from jons

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beer 4 Jeers</title>
+    <link rel="stylesheet" href="./assets/style.css" />
 </head>
 <body>
     <h1>Beers for Jeers!</h1>
@@ -34,5 +35,6 @@
     <footer>
 
     </footer>
+    <script src="./assets/script.js"></script>
 </body>
 </html>
