--- a/index.html
+++ b/index.html
@@ -1,13 +1,109 @@
 <!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Hello Bulma!</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link rel="stylesheet" href="./assets/style.css" />
+  </head>
+  <body>
+    <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 1</title>
+    <title>Beer 4 Jeers</title>
 </head>
 <body>
-    <div class ="container-fluid"></div>
-    
-</body>
+  <section class="hero">
+    <div class="hero-body">
+      <h1 class="title">
+        Beers For Jeers
+      </h1>
+      < class="subtitle">
+        Dad Joke Pairings
+      </p>
+    </div>
+    </section>
+    <form>
+        <input type="search" value="Choose a drink!"></input>
+        <input type="submit"></input>
+    </form>
+    <div class="tile">
+      <!-- The magical tile element! -->
+    </div>
+    <div class="tile is-ancestor">
+      <div class="tile is-vertical is-8">
+        <div class="tile">
+          <div class="tile is-parent is-vertical">
+            <article class="tile is-child notification is-primary">
+              <p class="title">Vertical...</p>
+              <p class="subtitle">Top tile</p>
+            </article>
+            <article class="tile is-child notification is-warning">
+              <p class="title">...tiles</p>
+              <p class="subtitle">Bottom tile</p>
+            </article>
+          </div>
+          <div class="tile is-parent">
+            <article class="tile is-child notification is-info">
+              <p class="title">Drink Picture</p>
+              <p class="subtitle">With an image</p>
+              <figure class="image is-4by3">
+                <img src="https://bulma.io/images/placeholders/640x480.png">
+              </figure>
+            </article>
+          </div>
+        </div>
+        <div class="tile is-parent">
+          <article class="tile is-child notification is-danger">
+            <p class="title">Awful terrible dad joke</p>
+            <p class="subtitle">Make us Laugh</p>
+            <div class="content">
+              <!-- Content -->
+            </div>
+          </article>
+        </div>
+      </div>
+      <div class="tile is-parent">
+        <article class="tile is-child notification is-success">
+          <div class="content">
+            <p class="title">Drink Information</p>
+            <p class="subtitle">With even more content</p>
+            <div class="content">
+              <!-- Content -->
+            </div>
+          </div>
+        </article>
+      </div>
+    </div>
+    <div>
+        <h2>INFO PLACEHOLDER</h2>
+        <section id="info-box">
+            <p>Drink info placeholder</p>
+        </section>
+    </div>
+        <section id="joke-box">
+            <p>Dad Joke Placeholder</p>
+        </section>
+    <div>
+        <!--image tag where a picture of the drink could go-->
+    </div>
+    <div>
+        <h2>Earlier Pairings</h2>
+        <ul>
+            <li>Placeholder list item</li>
+        </ul>
+    </div>
+    <footer>
+  
+  
+ 
+  
+      
+  
+  </body>
+  <script src="./assets/script.js"></script>
 </html>
