--- a/index.html
+++ b/index.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rampart+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/style.css" />
     <title>Beer 4 Jeers</title>
 </head>
-    <body>
-        <div class="hero-image">
-            <h1>Beers for Jeers</h1>
-                <form id="userForm">
-                    <label for="user-value">Enter a city name:</label>
-                    <input type="text" id="user-value" name="user-value">
-                    <button type="submit">Submit</button>
-                </form>
-                <div id="info-box">
-                <!-- Breweries and jokes will be appended here -->
-                </div>
-            <footer>
-                <h2>Come for the Beers and Stay for the Laughs</h2>
-            </footer>
-            <script src="./assets/script.js"></script>
-            </div>
+
+<body>
+    <div class="hero-image">
+        <h1>Beers for Jeers</h1>
         <!-- A form to search for a brewery by city -->
-            
-    </body>
+        <form id="userForm">
+            <label for="user-value">Enter a city name:</label>
+            <input type="text" id="user-value" name="user-value">
+            <button class="button is-success"> Slainte</button>
+        </form>
+        <div id="info-box">
+            <!-- Breweries and jokes will be appended here -->
+        </div>
+        <footer>
+            <h2>Come for the Beers and Stay for the Laughs</h2>
+        </footer>
+        <script src="./assets/script.js"></script>
+    </div>
+</body>
+
 </html>
